feat(ci): add Node.js test steps to workflows
Added npm test execution to deploy-to-nuget.yml and pr-build.yml.
Node.js is now set up and tests are run alongside .NET tests,
ensuring JavaScript/Node.js code is validated in CI/CD.

--- a/.github/workflows/deploy-to-nuget.yml
+++ b/.github/workflows/deploy-to-nuget.yml
@@ -71,6 +71,13 @@ jobs:
       - name: Test
         run: dotnet test --no-restore --configuration ${{ inputs.configuration }} 
 
+      - uses: actions/setup-node@v5
+        with:
+          node-version: lts/*
+
+      - name: run node tests
+        run: npm test
+
       - name: Publish 
         run: |
             dotnet pack NTComponents/NTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ needs.retrieve-tag.outputs.tag_name }}
