--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -53,6 +53,9 @@ jobs:
           dotnet test --no-restore --configuration Release 
           #--collect:"XPlat Code Coverage" --results-directory ./TestResults
 
+      - name: run node tests
+        run: npm test
+
       # - name: Post coverage summary to PR
       #   if: github.event_name == 'pull_request'
       #   uses: 5monkeys/cobertura-action@v13
