chore(workflow): update SSH key for repo checkout
Changed the GitHub Actions workflow to use NT_COMPONENTS_DEPLOY_KEY instead of INTERSECT_DEPLOY_KEY for repository authentication during checkout. This ensures the workflow uses the correct credentials for accessing the repository.

--- a/.github/workflows/tag-template.yml
+++ b/.github/workflows/tag-template.yml
@@ -16,7 +16,7 @@ jobs:
           ref: ${{ github.ref }}
           fetch-depth: 0
           persist-credentials: true
-          ssh-key: ${{ secrets.INTERSECT_DEPLOY_KEY }}
+          ssh-key: ${{ secrets.NT_COMPONENTS_DEPLOY_KEY }}
       
       - name: Check if commit is tagged
         id: check-tags
