--- a/NTComponents.Charts/NTComponents.Charts.csproj
+++ b/NTComponents.Charts/NTComponents.Charts.csproj
@@ -19,4 +19,8 @@
       <ProjectReference Include="..\NTComponents\NTComponents.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Core\" />
+    </ItemGroup>
+
 </Project>
