chore(ci): force Release config for build and test steps
Updated deploy-to-nuget.yml to always use the Release configuration for both build and test steps, replacing the use of the ${{ inputs.configuration }} variable. This ensures consistent Release-mode builds and tests regardless of workflow input parameters.

--- a/.github/workflows/deploy-to-nuget.yml
+++ b/.github/workflows/deploy-to-nuget.yml
@@ -66,10 +66,10 @@ jobs:
         run: dotnet restore
       
       - name: Build
-        run: dotnet build --no-restore --configuration ${{ inputs.configuration }} 
+        run: dotnet build --no-restore --configuration Release
 
       - name: Test
-        run: dotnet test --no-restore --configuration ${{ inputs.configuration }} 
+        run: dotnet test --no-restore --configuration Release
 
       - uses: actions/setup-node@v5
         with:
