--- a/NTComponents/NTComponents.csproj
+++ b/NTComponents/NTComponents.csproj
@@ -23,6 +23,9 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 		<PackageIcon>Logo.png</PackageIcon>
 	</PropertyGroup>
+	<ItemGroup>
+	  <Content Remove="compilerconfig.json" />
+	</ItemGroup>
 	
 	<ItemGroup>
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
@@ -59,6 +62,7 @@
 		  <PackagePath>\</PackagePath>
 		</None>
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="compilerconfig.json" />
 	</ItemGroup>
 
 	<Target Name="DeleteCssFiles" BeforeTargets="BeforeClean">
