fix(ci): add Node.js install and test steps to workflow
Added npm install and npm test steps to deploy-to-nuget.yml to ensure Node.js dependencies are installed and JavaScript tests are run before publishing. This improves test coverage for JavaScript/Node.js components in the deployment process.

--- a/.github/workflows/deploy-to-nuget.yml
+++ b/.github/workflows/deploy-to-nuget.yml
@@ -78,6 +78,9 @@ jobs:
       - name: Test
         run: dotnet test --no-restore --configuration Release
 
+      - name: Install node dependencies
+        run: npm install
+
       - name: run node tests
         run: npm test
       
