--- a/LiveTest/LiveTest.Client/LiveTest.Client.csproj
+++ b/LiveTest/LiveTest.Client/LiveTest.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
 	  <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
@@ -9,7 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\NTComponents.Charts\NTComponents.Charts.csproj" />
     <ProjectReference Include="..\..\NTComponents.Extensions\NTComponents.Extensions.csproj" />
     <ProjectReference Include="..\..\NTComponents\NTComponents.csproj" />
   </ItemGroup>
