feat(button-group): add NTButtonGroup component and demo
Introduces the NTButtonGroup component with Material-style connected/disconnected layouts, selection, tinting, and accessibility support. Adds a comprehensive demo page at /button-group with interactive controls for appearance, size, color, and behavior. Updates navigation to include the new demo. Refactors button SCSS to use new pill border radius variables for consistent styling across sizes.

--- a/NTComponents.Tests/NTComponents.Tests.csproj
+++ b/NTComponents.Tests/NTComponents.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
@@ -11,6 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoFixture" Version="4.17.0" />
 		<PackageReference Include="AwesomeAssertions" Version="9.3.0" />
 		<PackageReference Include="AwesomeAssertions.Analyzers" Version="9.0.8">
 			<PrivateAssets>all</PrivateAssets>
